2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersRule.cs: Add XML documentation and 
	two [FxCopCompatibility] attributes. Ignore p/invokes since they 
	often need ref and out but should not be visible (but there's a 
	specific rule for that). 
	* AvoidVisibleNestedTypesRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute.
	* ConsiderConvertingFieldToNullableRule.cs: Add XML documentation. 
	Avoid unnecessary specialization in IsHasField (self-test).
	* ConsiderConvertingMethodToPropertyRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute. Remove duplicate check.
	* ConsiderUsingStaticTypeRule.cs: Add XML documentation. Fix 
	constructor parameter check.
	* DeclareEventHandlersCorrectlyRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute. Add more precise handling of 
	generics.

2008-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute. Ignore enums, interfaces and 
	delegates. Split CheckType and avoid unneeded specialization of some
	parameters (self-tests).
	* DisposableTypesShouldHaveFinalizerRule.cs: Add XML documentation
	and [FxCopCompatibility] attribute. Ignore enums and delegates.
	* DoNotDeclareVirtualMethodsInSealedTypeRule.cs: New. Rule to 
	check if sealed types introduce new virtual methods.
	* DontDeclareProtectedFieldsInSealedClassRule.cs: Add XML 
	documentation and [FxCopCompatibility] attribute. Ignore enums, 
	value types and delegates. Add check for members (not just fields).
	* EnsureSymmetryForOverloadedOperatorsRule.cs: Add XML 
	documentation and [FxCopCompatibility] attribute. Ignore delegates.
	* Makefile.am: Add new rule and test to the build.

2008-10-04  Sebastien Pouliot  <sebastien@ximian.com>
