@@ -1,3 +1,8 @@
+2008-10-16  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DeclareEventHandlersCorrectlyRule.cs, EnumsShouldUseInt32Rule.cs:
+	Fix XML documentation to be valid (otherwise it wont generate docs)
+
 2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>
 
 	* doc/: Initial import documentation for the rules which belongs to this
